...
                  }
                  HStack {
                    insert("0", width: unitWidth * 2 + spacing)
                    insert(".")
                  }
                }
                generic("enter", height: unitHeight * 2 + spacing) {
                  onEvaluate()
                }
              }
            }
          }
            .padding(.top, 16)
...
